# repo-sage

./: .gitignore  .justfile  README.md  pyproject.toml  pytest.toml  ruff.toml
src/repo_sage/: defaults.py  search_agent.py  vector_engine.py
src/repo_sage/ingestion/: chunking.py  github.py  vector_engine.py
src/repo_sage/utils/: logging.py
tests/: conftest.py  test_ingestion.py  test_ingestion_integration.py  test_vector_engine.py
tests/test_ingestion/: test_github.py  test_github_integration.py  test_splitting.py  test_splitting_integration.py  test_vector_engine.py
