[project]
name = "repo-sage"
version = "0.1.0"
description = "A simple Q&A agent that can answer questions about a GitHub repository"
readme = "README.md"
authors = [
    { name = "Nima Nooshiri", email = "nima.nooshiri@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "google-genai>=1.59.0",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
]

[project.scripts]
repo-qa-agent = "repo_sage:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]
